// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defineFmtConfig 1`] = `
{
  "arrowParens": "avoid",
  "endOfLine": "lf",
  "proseWrap": "never",
  "semi": false,
  "singleQuote": true,
  "trailingComma": "none",
}
`;

exports[`defineLintConfig 1`] = `
{
  "ignorePatterns": [],
  "options": {
    "typeAware": true,
    "typeCheck": true,
  },
  "overrides": [
    {
      "files": [
        "**/*.{test,spec}.{ts,tsx}",
        "**/*.{test,spec}.{ts,tsx}",
      ],
      "plugins": [
        "vitest",
      ],
    },
    {
      "files": [
        "**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "jsPlugins": [
        "@kazupon/eslint-plugin",
      ],
      "rules": {
        "@kazupon/enforce-header-comment": "warn",
        "@kazupon/no-tag-comments": [
          "warn",
          {
            "tags": [
              "TODO",
              "FIXME",
              "BUG",
            ],
          },
        ],
        "@kazupon/prefer-inline-code-words-comments": "error",
        "@kazupon/prefer-scope-on-tag-comment": [
          "warn",
          {
            "directives": [
              "oxlint-disable",
              "oxlint-disable-next-line",
              "oxlint-disable-line",
              "@ts-expect-error",
              "@ts-ignore",
              "@ts-nocheck",
              "eslint-disable",
              "eslint-disable-next-line",
              "eslint-disable-line",
            ],
            "tags": [
              "TODO",
              "FIXME",
              "HACK",
              "BUG",
              "NOTE",
            ],
          },
        ],
      },
    },
    {
      "files": [
        "**/*.md",
        "**/*.md/**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.config.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.{test,spec}-d.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "rules": {
        "@kazupon/enforce-header-comment": "off",
      },
    },
  ],
  "plugins": [
    "typescript",
    "import",
    "promise",
    "unicorn",
    "node",
  ],
  "rules": {
    "curly": "error",
  },
}
`;

exports[`defineLintConfig with jsdoc 1`] = `
{
  "ignorePatterns": [],
  "options": {
    "typeAware": true,
    "typeCheck": true,
  },
  "overrides": [
    {
      "files": [
        "**/*.{test,spec}.{ts,tsx}",
        "**/*.{test,spec}.{ts,tsx}",
      ],
      "plugins": [
        "vitest",
      ],
    },
    {
      "files": [
        "**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "jsPlugins": [
        "@kazupon/eslint-plugin",
      ],
      "rules": {
        "@kazupon/enforce-header-comment": "warn",
        "@kazupon/no-tag-comments": [
          "warn",
          {
            "tags": [
              "TODO",
              "FIXME",
              "BUG",
            ],
          },
        ],
        "@kazupon/prefer-inline-code-words-comments": "error",
        "@kazupon/prefer-scope-on-tag-comment": [
          "warn",
          {
            "directives": [
              "oxlint-disable",
              "oxlint-disable-next-line",
              "oxlint-disable-line",
              "@ts-expect-error",
              "@ts-ignore",
              "@ts-nocheck",
              "eslint-disable",
              "eslint-disable-next-line",
              "eslint-disable-line",
            ],
            "tags": [
              "TODO",
              "FIXME",
              "HACK",
              "BUG",
              "NOTE",
            ],
          },
        ],
      },
    },
    {
      "files": [
        "**/*.md",
        "**/*.md/**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.config.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.{test,spec}-d.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "rules": {
        "@kazupon/enforce-header-comment": "off",
      },
    },
    {
      "files": [
        "**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "jsPlugins": [
        {
          "name": "ox-jsdoc",
          "specifier": "@ox-jsdoc/eslint-plugin-jsdoc",
        },
      ],
      "rules": {
        "ox-jsdoc/check-access": "error",
        "ox-jsdoc/check-alignment": "error",
        "ox-jsdoc/check-examples": "off",
        "ox-jsdoc/check-indentation": "off",
        "ox-jsdoc/check-line-alignment": "off",
        "ox-jsdoc/check-param-names": [
          "error",
          {
            "checkDestructured": false,
          },
        ],
        "ox-jsdoc/check-property-names": "error",
        "ox-jsdoc/check-syntax": "off",
        "ox-jsdoc/check-tag-names": [
          "error",
          {
            "definedTags": [
              "typeParam",
              "experimental",
            ],
          },
        ],
        "ox-jsdoc/check-template-names": "off",
        "ox-jsdoc/check-types": "error",
        "ox-jsdoc/check-values": "error",
        "ox-jsdoc/convert-to-jsdoc-comments": "off",
        "ox-jsdoc/empty-tags": "error",
        "ox-jsdoc/escape-inline-tags": "error",
        "ox-jsdoc/implements-on-classes": "error",
        "ox-jsdoc/imports-as-dependencies": "off",
        "ox-jsdoc/informative-docs": "off",
        "ox-jsdoc/lines-before-block": "off",
        "ox-jsdoc/match-description": "off",
        "ox-jsdoc/match-name": "off",
        "ox-jsdoc/multiline-blocks": "error",
        "ox-jsdoc/no-bad-blocks": "off",
        "ox-jsdoc/no-blank-block-descriptions": "off",
        "ox-jsdoc/no-blank-blocks": "off",
        "ox-jsdoc/no-defaults": "error",
        "ox-jsdoc/no-missing-syntax": "off",
        "ox-jsdoc/no-multi-asterisks": "error",
        "ox-jsdoc/no-restricted-syntax": "off",
        "ox-jsdoc/no-types": "error",
        "ox-jsdoc/no-undefined-types": "off",
        "ox-jsdoc/prefer-import-tag": "off",
        "ox-jsdoc/reject-any-type": "error",
        "ox-jsdoc/reject-function-type": "error",
        "ox-jsdoc/require-asterisk-prefix": "off",
        "ox-jsdoc/require-description": [
          "error",
          {
            "contexts": [
              "ArrowFunctionExpression",
              "ClassDeclaration",
              "ClassExpression",
              "FunctionDeclaration",
              "FunctionExpression",
              "MethodDefinition",
              "PropertyDefinition",
              "VariableDeclaration",
              "TSInterfaceDeclaration",
              "TSTypeAliasDeclaration",
              "TSPropertySignature",
              "TSMethodSignature",
            ],
          },
        ],
        "ox-jsdoc/require-description-complete-sentence": "off",
        "ox-jsdoc/require-example": "off",
        "ox-jsdoc/require-file-overview": "off",
        "ox-jsdoc/require-hyphen-before-param-description": [
          "error",
          "always",
          {
            "tags": {
              "typeParam": "always",
            },
          },
        ],
        "ox-jsdoc/require-jsdoc": [
          "error",
          {
            "contexts": [
              "TSInterfaceDeclaration",
              "TSTypeAliasDeclaration",
              "TSPropertySignature",
              "TSMethodSignature",
            ],
            "publicOnly": true,
            "require": {
              "ArrowFunctionExpression": true,
              "ClassDeclaration": true,
              "ClassExpression": true,
              "FunctionDeclaration": true,
              "FunctionExpression": true,
              "MethodDefinition": true,
            },
          },
        ],
        "ox-jsdoc/require-next-description": "off",
        "ox-jsdoc/require-next-type": "error",
        "ox-jsdoc/require-param": [
          "error",
          {
            "checkDestructuredRoots": false,
          },
        ],
        "ox-jsdoc/require-param-description": "error",
        "ox-jsdoc/require-param-name": "error",
        "ox-jsdoc/require-param-type": "off",
        "ox-jsdoc/require-property": "error",
        "ox-jsdoc/require-property-description": "error",
        "ox-jsdoc/require-property-name": "error",
        "ox-jsdoc/require-property-type": "off",
        "ox-jsdoc/require-rejects": "off",
        "ox-jsdoc/require-returns": "error",
        "ox-jsdoc/require-returns-check": "error",
        "ox-jsdoc/require-returns-description": "error",
        "ox-jsdoc/require-returns-type": "off",
        "ox-jsdoc/require-tags": "off",
        "ox-jsdoc/require-template": "off",
        "ox-jsdoc/require-template-description": "off",
        "ox-jsdoc/require-throws": "off",
        "ox-jsdoc/require-throws-description": "off",
        "ox-jsdoc/require-throws-type": "error",
        "ox-jsdoc/require-yields": "error",
        "ox-jsdoc/require-yields-check": "error",
        "ox-jsdoc/require-yields-description": "off",
        "ox-jsdoc/require-yields-type": "error",
        "ox-jsdoc/sort-tags": "off",
        "ox-jsdoc/tag-lines": [
          "error",
          "any",
          {
            "applyToEndTag": false,
            "startLines": 1,
          },
        ],
        "ox-jsdoc/text-escaping": "off",
        "ox-jsdoc/ts-method-signature-style": "off",
        "ox-jsdoc/ts-no-empty-object-type": "error",
        "ox-jsdoc/ts-no-unnecessary-template-expression": "off",
        "ox-jsdoc/ts-prefer-function-type": "off",
        "ox-jsdoc/type-formatting": "off",
        "ox-jsdoc/valid-types": "error",
      },
    },
  ],
  "plugins": [
    "typescript",
    "import",
    "promise",
    "unicorn",
    "node",
  ],
  "rules": {
    "curly": "error",
  },
  "settings": {
    "jsdoc": {
      "oxParseStrategy": "batch",
      "tagNamePreference": {
        "template": "typeParam",
      },
    },
  },
}
`;

exports[`defineLintConfig with regexp 1`] = `
{
  "ignorePatterns": [],
  "options": {
    "typeAware": true,
    "typeCheck": true,
  },
  "overrides": [
    {
      "files": [
        "**/*.{test,spec}.{ts,tsx}",
        "**/*.{test,spec}.{ts,tsx}",
      ],
      "plugins": [
        "vitest",
      ],
    },
    {
      "files": [
        "**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "jsPlugins": [
        "@kazupon/eslint-plugin",
      ],
      "rules": {
        "@kazupon/enforce-header-comment": "warn",
        "@kazupon/no-tag-comments": [
          "warn",
          {
            "tags": [
              "TODO",
              "FIXME",
              "BUG",
            ],
          },
        ],
        "@kazupon/prefer-inline-code-words-comments": "error",
        "@kazupon/prefer-scope-on-tag-comment": [
          "warn",
          {
            "directives": [
              "oxlint-disable",
              "oxlint-disable-next-line",
              "oxlint-disable-line",
              "@ts-expect-error",
              "@ts-ignore",
              "@ts-nocheck",
              "eslint-disable",
              "eslint-disable-next-line",
              "eslint-disable-line",
            ],
            "tags": [
              "TODO",
              "FIXME",
              "HACK",
              "BUG",
              "NOTE",
            ],
          },
        ],
      },
    },
    {
      "files": [
        "**/*.md",
        "**/*.md/**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.config.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
        "**/*.{test,spec}-d.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "rules": {
        "@kazupon/enforce-header-comment": "off",
      },
    },
    {
      "files": [
        "**/*.{js,mjs,cjs,ts,mts,cts,jsx,tsx}",
      ],
      "jsPlugins": [
        {
          "name": "regexp",
          "specifier": "eslint-plugin-regexp",
        },
      ],
      "rules": {
        "no-control-regex": "error",
        "no-empty-character-class": "off",
        "no-invalid-regexp": "off",
        "no-misleading-character-class": "error",
        "no-regex-spaces": "error",
        "no-useless-backreference": "off",
        "regexp/confusing-quantifier": "warn",
        "regexp/control-character-escape": "error",
        "regexp/match-any": "error",
        "regexp/negation": "error",
        "regexp/no-contradiction-with-assertion": "error",
        "regexp/no-dupe-characters-character-class": "error",
        "regexp/no-dupe-disjunctions": "error",
        "regexp/no-empty-alternative": "warn",
        "regexp/no-empty-capturing-group": "error",
        "regexp/no-empty-character-class": "error",
        "regexp/no-empty-group": "error",
        "regexp/no-empty-lookarounds-assertion": "error",
        "regexp/no-empty-string-literal": "error",
        "regexp/no-escape-backspace": "error",
        "regexp/no-extra-lookaround-assertions": "error",
        "regexp/no-invalid-regexp": "error",
        "regexp/no-invisible-character": "error",
        "regexp/no-lazy-ends": "warn",
        "regexp/no-legacy-features": "error",
        "regexp/no-misleading-capturing-group": "error",
        "regexp/no-misleading-unicode-character": "error",
        "regexp/no-missing-g-flag": "error",
        "regexp/no-non-standard-flag": "error",
        "regexp/no-obscure-range": "error",
        "regexp/no-optional-assertion": "error",
        "regexp/no-potentially-useless-backreference": "warn",
        "regexp/no-super-linear-backtracking": "error",
        "regexp/no-trivially-nested-assertion": "error",
        "regexp/no-trivially-nested-quantifier": "error",
        "regexp/no-unused-capturing-group": "error",
        "regexp/no-useless-assertions": "error",
        "regexp/no-useless-backreference": "error",
        "regexp/no-useless-character-class": "error",
        "regexp/no-useless-dollar-replacements": "error",
        "regexp/no-useless-escape": "error",
        "regexp/no-useless-flag": "warn",
        "regexp/no-useless-lazy": "error",
        "regexp/no-useless-non-capturing-group": "error",
        "regexp/no-useless-quantifier": "error",
        "regexp/no-useless-range": "error",
        "regexp/no-useless-set-operand": "error",
        "regexp/no-useless-string-literal": "error",
        "regexp/no-useless-two-nums-quantifier": "error",
        "regexp/no-zero-quantifier": "error",
        "regexp/optimal-lookaround-quantifier": "warn",
        "regexp/optimal-quantifier-concatenation": "error",
        "regexp/prefer-character-class": "error",
        "regexp/prefer-d": "error",
        "regexp/prefer-plus-quantifier": "error",
        "regexp/prefer-predefined-assertion": "error",
        "regexp/prefer-question-quantifier": "error",
        "regexp/prefer-range": "error",
        "regexp/prefer-set-operation": "error",
        "regexp/prefer-star-quantifier": "error",
        "regexp/prefer-unicode-codepoint-escapes": "error",
        "regexp/prefer-w": "error",
        "regexp/simplify-set-operations": "error",
        "regexp/sort-flags": "error",
        "regexp/strict": "error",
        "regexp/use-ignore-case": "error",
      },
    },
  ],
  "plugins": [
    "typescript",
    "import",
    "promise",
    "unicorn",
    "node",
  ],
  "rules": {
    "curly": "error",
  },
}
`;
